--- a/themes/jaeger-docs/source/sass/navbar.sass
+++ b/themes/jaeger-docs/source/sass/navbar.sass
@@ -1,7 +1,9 @@
 @import "variables"
 
 .navbar
-  border-bottom: 1px solid $white-ter
+  background: #fafafa;
+  border-bottom: 1px solid #ccc;
+  box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.1);
 
   .navbar-menu
     .navbar-item
